apps/grafana-shared/base/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: grafana-shared
spec:
  mtls:
    mode: PERMISSIVE
