apps/grafana-shared/base/AuthorizationPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-operator-to-grafana
  namespace: grafana-shared
spec:
  selector:
      app: grafana
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/grafana-operator/sa/grafana-operator"]
